examples/v1.0.0/commons/fetch/ts/invalid/fetch.request.invalid.1.ts
// INVALID fetch.request #1 — wrong verb + missing source

export const fetchRequestInvalid1: any = {
  x402: {
    verb: "summarize",
    version: "1.0.0"
  },
  query: "level=error"
};
